<resources>
    <!-- main page   -->
    <string name="app_name">Character Link Rolling</string>
    <string name="greeting">Welcome!</string>
    <string name="diceCountBarLabel">How many dice?</string>
    <string name="diceSideBarLabel">How many sides per die?</string>
    <string name="modifierPrompt">Modifier:</string>
    <string name="modifierHint">0</string>
    <string name="rollDice">Roll</string>
    <string name="characterButton">Update Character</string>
    <string name="newCharacter">New Character</string>

    <!-- save settings -->
    <string name="characterNameLabel">Name your character: </string>
    <string name="nameHint">Steven West</string>
    <string name="characterClassLabel">Select a class: </string>
    <string name="openDiceSaveLabel">Share class action settings?</string>
    <string name="saveDiceToCharacter">Save action to character?</string>

    <!-- character options -->
    <string-array name="characterClasses">
        <item>Fighter</item>
        <item>Wizard</item>
        <item>Ranger</item>
        <item>Cleric</item>
    </string-array>
    <string name="classFighter">Fighter</string>
    <string name="classWizard">Wizard</string>
    <string name="classRanger">Ranger</string>
    <string name="classCleric">Cleric</string>
    <string name="classNull">None</string>

    <!-- character pop up -->
    <string name="namesTitle">Characters</string>

    <!-- credit info -->
    <string name="credits">Credits</string>
    <string name="creditsInfo">" UI Design: Catherine Thomsen \n"
        "Produced by: Catherine Thomsen \n"
        "Images from: materialdesignicons.com/"
    </string>

    <string name="select_dice">Select dice</string>
    <string name="save_action_button">Save Action</string>
    <string name="action_name_field">Action Name:</string>

</resources>