<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterSettings">

    <TextView
        android:id="@+id/characterName"
        android:layout_margin="@dimen/standard_indent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/characterNameLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:labelFor="@id/characterNameEditText"
        />

    <EditText
        android:id="@+id/characterNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_indent"
        android:ems="10"
        android:hint="@string/nameHint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/characterName" />

    <TextView
        android:id="@+id/characterClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_indent"
        android:text="@string/characterClassLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/characterNameEditText"
        android:labelFor="@id/classSpinner"
        />
    <Spinner
        android:id="@+id/classSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/characterClass"
        app:layout_constraintBaseline_toBaselineOf="@id/characterClass"
        />
    <TextView
        android:id="@+id/sharingStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_indent"
        android:text="@string/openDiceSaveLabel"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/characterClass"
        android:labelFor="@id/sharingStatusClassSwitch"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sharingStatusClassSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/sharingStatus"
        app:layout_constraintBaseline_toBaselineOf="@id/sharingStatus"/>

    <Button
        android:id="@+id/finishSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_indent"
        android:text="@string/characterButton"
        android:onClick="onFinishButtonSelectedUpdate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sharingStatus" />

    <Button
        android:id="@+id/newCharacter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_indent"
        android:text="@string/newCharacter"
        android:onClick="onFinishButtonSelectedNew"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finishSettings" />

</androidx.constraintlayout.widget.ConstraintLayout>