<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:layout_marginTop="@dimen/standard_indent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/diceSides"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diceSideBarLabel"
        android:textSize="@dimen/section_text_Size"
        android:layout_marginLeft="@dimen/standard_indent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greeting"
        android:labelFor="@id/diceSidesBar"
        android:layout_marginStart="@dimen/standard_indent" />

    <SeekBar
        android:id="@+id/diceSidesBar"
        android:layout_margin="@dimen/standard_indent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diceSides"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:max="19"
        android:progress="10" />

    <TextView
        android:id="@+id/diceCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_indent"
        android:layout_marginRight="@dimen/standard_indent"
        android:text="@string/diceCountBarLabel"
        android:textSize="@dimen/section_text_Size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diceSidesBar"
        android:labelFor="@id/diceCountBar"
        />

    <SeekBar
        android:id="@+id/diceCountBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_indent"
        android:layout_marginRight="@dimen/standard_indent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diceCount"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:max="14"
        android:progress="5" />

    <TextView
        android:id="@+id/modifierLabel"
        android:layout_marginLeft="@dimen/standard_indent"
        android:layout_marginRight="@dimen/standard_indent"
        android:text="@string/modifierPrompt"
        android:textSize="@dimen/section_text_Size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diceCountBar"
        android:layout_marginStart="@dimen/standard_indent"
        android:layout_marginEnd="@dimen/standard_indent" />

    <EditText
        android:id="@+id/modifierField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_indent"
        android:textSize="@dimen/section_text_Size"
        android:ems="3"
        android:hint="@string/modifierHint"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@id/modifierLabel"
        app:layout_constraintBaseline_toBaselineOf="@id/modifierLabel" />

    <Button
        android:id="@+id/saveActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_margin="@dimen/standard_indent"
        android:text="@string/save_action_button"
        app:layout_constraintLeft_toRightOf="@id/modifierField"
        app:layout_constraintBaseline_toBaselineOf="@id/modifierLabel" />

    <Button
        android:id="@+id/rollDiceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_indent"
        android:text="@string/rollDice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modifierLabel" />

    <Button
        android:id="@+id/setCharacterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_indent"
        android:text="@string/characterButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rollDiceButton" />

    <ImageView
        android:id="@+id/classImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setCharacterButton"
        app:layout_constraintRight_toRightOf="parent"
        app:tint="@color/teal_700" />


</androidx.constraintlayout.widget.ConstraintLayout>